<resources>
    <string name="app_name">Lego Catalog</string>
    <string name="hint_set_number">Set number</string>
    <string name="hint_filter">Type to filter</string>
    <string name="new_set_title">New set</string>
    <string name="unknown_error">Unknown error</string>
    <string name="parts_count">Parts count: %s</string>
    <string name="add_button">Add to my sets</string>
    <string name="set_type_title">Choose type</string>
    <string name="summary">Parts: %d</string>
    <string name="summary_all">Parts: %d\nUnique: %d</string>
    <string name="quantity">x%d</string>
    <string name="filter_title_text">Common filters</string>
    <string name="filter_title_color">Filter by colors</string>
    <string name="filter_title_quantity">Filter by quantity</string>
    <string name="filter_confirm">Apply filters</string>
    <string name="filter_reset">Reset</string>
    <string name="filter_name_hint">Enter part name</string>
    <string name="filter_color_hint">Enter color name</string>
    <string name="filter_quantity_from_hint">Quantity from</string>
    <string name="filter_quantity_to_hint">Quantity to</string>
    <string name="filter_id_hint">Enter part id</string>
    <string name="common_error">An unknown error occurred.</string>
    <string name="confirm_delete">Delete set "%s"?</string>
    <string name="confirm_delete_yes">Yes</string>
    <string name="confirm_delete_no">No</string>
    <string name="filter_all_types">All types</string>
    <string name="empty_list">No parts</string>

    <string name="type_duplo">Duplo</string>
    <string name="type_city">City</string>
    <string name="type_technic">Technic</string>

    <string name="menu_all_parts">All parts</string>

    <string-array name="types">
        <item>@string/type_duplo</item>
        <item>@string/type_city</item>
        <item>@string/type_technic</item>
    </string-array>
</resources>
