<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="150dp"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/set_type_title"
        android:background="@color/colorAccent"
        style="@style/mediumText"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:padding="@dimen/out_padding"
        />

    <Button
        android:id="@+id/type_duplo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/type_duplo"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_default_button"
        android:layout_marginTop="2dp"
        />
    <Button
        android:id="@+id/type_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_duplo"
        android:text="@string/type_city"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_default_button"
        android:layout_marginTop="2dp"
        />
    <Button
        android:id="@+id/type_technic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_city"
        android:text="@string/type_technic"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_default_button"
        android:layout_marginTop="2dp"
        />

</android.support.constraint.ConstraintLayout>